--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -204,6 +204,8 @@ we write
 See the proofs of Theorems~\vrefrange{theorem:SoundPathBreaker}{theorem:SoundMultipleIsolatedSubflowsRemoval} for more examples of implicit equations.
 \end{notation}
 
+We now give some standard results which will also serve as examples of system $\SKS$ and the functorial calculus.
+
 \begin{lemma}\label{lemma:SuperSwitch}
 Given a context $\xi\vlhole$ and a formula $\alpha$ there exist derivations $\vlder{}{\{\swi\}}{\xi\{\alpha\}}{\vls(\alpha.\xi\{\ttt\})}$ and $\vlder{}{\{\swi\}}{\vls[\xi\{\fff\}.\alpha]}{\xi\{\alpha\}}$; both of whose size depend at most quadratically on the size of $\xi\{\alpha\}$.
 \end{lemma}
