--- a/flows.tex
+++ b/flows.tex
@@ -122,6 +122,92 @@ An atomic flow is a directed graph, whose edges are associated to atom occurrenc
 
 The polarity assignment condition (\ref{definition:AtomicFlow:item:PolarityAssignment}) ensures that atoms in (co)contractions have the same polarity, and those in interactions and cuts have dual polarities (as happens in derivations). Every atomic flow has $2^n$ polarity assignments, where $n$ is the number of connected components in the graph. We should not be worried about the apparent complexity of the polarity assignment condition: in fact, we could equivalently consider two sorts of (co)contraction and (co)weakening labels, the negative and the positive ones, and ask for vertices to be joined by respecting their polarities. This is clearly a locally checkable property, much simpler than, for example, some global correctness criterion for proof nets.
 
+\begin{definition}\label{definition:FlowIsomorphism}
+An (\emph{atomic}) \emph{flow isomorphism}\index{flow!isomorphism} between the atomic flows $\phi_1=(V_1,E_1,\eta_1,\up_1,\lo_1)$ and $\phi_2=(V_2,E_2,\eta_2,\up_2,\lo_2)$ is a pair of functions $(f_V,f_E)$, such that
+\begin{itemize}
+\item $f_V$ is a bijection from $V_1$ to $V_2$; and 
+\item $f_E$ is a bijection from $E_1$ to $E_2$,
+\end{itemize}
+such that, for every $\epsilon$ in $E_1$,
+\begin{itemize}
+\item for every $\nu$ in $V_1$, $\up_1(\epsilon)=\nu$ (resp., $\lo_1(\epsilon)=\nu$) if and only if $\up_2(f_E(\epsilon))=f_V(\nu)$ (resp., $\lo_2(f_E(\epsilon))=f_V(\nu)$); and
+\item $\up_1(\epsilon)=\top$ (resp., $\lo_1(\epsilon)=\bot$) if and only if $\up_2(f_E(\epsilon))=\top$ (resp., $\lo_2(f_E(\epsilon))=\bot$).
+\end{itemize}
+Given a polarity assignment $\pi$ to $\phi_1$, we define the polarity assignment $\pi$ to $\phi_2$, such that, for every $f_E(\epsilon)$ in $E_2$, $\pi(f_E(\epsilon))=\pi(\epsilon)$.
+\end{definition}
+
+%----------------------------------------------------
+\begin{definition}\label{definiton:InducedPolarity}
+Given
+\begin{itemize}
+ \item two atomic flows $\phi$ and $\psi$;
+ \item a polarity assignment $\pi$ for $\phi$; and
+ \item isomorphisms $f_1$, $\dots$, $f_n$ between subflows $\phi_1$, $\dots$, $\phi_n$ of $\phi$ and subflows $\psi_1$, $\dots$, $\psi_n$ of $\psi$,
+\end{itemize}
+let $\pi_i$ be $\pi$ restricted to $\phi_i$, and let $\pi'$ be a polarity assigment for $\psi$, such that $\pi'$ restricted to $\psi_i$ equals $\pi_i$ (which is a polarity assignment for $\psi_i$ by Definition~\ref{definition:FlowIsomorphism}), then if $\pi'$ is unique, we call it $\pi$.
+\end{definition}
+%---------------
+
+\newbox\contrup\setbox\contrup=\hbox{$
+   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
+   \atomicflow{(0,0)*{\afacu{}{}{}{}{}{}}}$}
+\newbox\contrdown\setbox\contrdown=\hbox{$
+   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
+   \atomicflow{(0,0)*{\afacd{}{}{}{}{}{}}}$}
+\newbox\interdown\setbox\interdown=\hbox{$
+   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
+   \atomicflow{(0,0)*{\afaid{}{}{}{}{}{}}}$}
+\newbox\interup\setbox\interup=\hbox{$
+   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
+   \atomicflow{(0,0)*{\afaiu{}{}{}{}{}{}}}$}
+\newbox\weakdown\setbox\weakdown=\hbox{$
+   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
+   \atomicflow{(0,0)*{\afawd{}{}{}{}{}{}}}$}
+\newbox\weakup\setbox\weakup=\hbox{$
+   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
+   \atomicflow{(0,0)*{\afawu{}{}{}{}{}{}}}$}
+
+\begin{notation}\label{notation:LabelsOnBoxes}
+Let $\phi$ be an atomic flow with upper edges $\boldsymbol\epsilon=\{\epsilon_1,\dots,\epsilon_n\}$ and lower edges $\boldsymbol\iota=\{\iota_1,\dots,\iota_m\}$, we then represent it as
+\[
+\atomicflow{
+(-3, 6)*{\afvju4{\epsilon_1}{}};
+( 0, 6)*{\cdots};
+( 3, 6)*{\afvju4{}{\epsilon_n}};
+( 0, 0)*{\affr88};
+( 1, 2)*{\aflabelright\phi};
+(-3,-6)*{\afvju4{\iota_1}{}};
+( 0,-6)*{\cdots};
+( 3,-6)*{\afvju4{}{\iota_m}};
+}
+\qquad\mbox{or}\qquad
+\atomicflow{
+( 0,6)*{\afvjum4{\boldsymbol\epsilon}{}};
+( 0,0)*{\affr88};
+( 1,2)*{\aflabelright\phi};
+( 0,-6)*{\afvjdm4{\boldsymbol\iota}{}};
+}\quad.
+\]
+We sometimes use flow labels to indicate what kind of vertices an atomic flow might contain. \emph{E.g.}, the following flows
+\[
+\atomicflow{
+( 0, 6)*{\afvjm4};
+(-2, 0)*{\copy\contrup};
+( 0, 0)*{\affr{10}8};
+( 2, 0)*{\copy\contrdown};
+( 0,-6)*{\afvjm4};
+}\qquad\mbox{and}\qquad
+\atomicflow{
+(0, 6)*{\afvjm4};
+(0, 0)*{\affr88};
+(0, 0)*{\copy\contrdown};
+(0,-6)*{\afvjm4};
+}\quad,
+\]
+do not contain $\aid$, $\aiu$, $\awd$, $\awu$ vertices, and the flow to the right does not contain $\acu$ vertices.
+
+In general, we represent atomic flows as directed-graph diagrams, except that the special vertices $\top$ and $\bot$ are not shown, and the labels of the vertices are explicitly shown as graphical elements. When we refer to the vertices of an atomic flow, we do not include $\top$ and $\bot$. Sometimes we identify vertices with their labels. 
+\end{notation}
 
 %--------------
 \begin{example}
@@ -189,7 +275,7 @@ is obtained by juxtaposing (\emph{i.e.}, composing by identifying zero edges):
 \item a flow obtained by composing a cut vertex with a cocontraction vertex, and
 \item a flow obtained by composing an identity vertex with a cut vertex.
 \end{itemize}
-Note that there are no cycles in the flow, and that we can find 32 different polarity assignments, \emph{i.e.}, two for each of the five connected components of the flow (this is a general rule).
+Note that there are no cycles in the flow, and that we can find 32 different polarity assignments, \emph{i.e.}, two for each of the five connected components of the flow.
 \end{example}
 
 %--------------
@@ -212,95 +298,6 @@ The following two diagrams are not atomic flows:
 The left one is not a flow because there is a cycle in it, and the right one because there is no possible polarity assignment.
 \end{example}
 %------------
-
-\begin{definition}\label{definition:FlowIsomorphism}
-An (\emph{atomic}) \emph{flow isomorphism}\index{flow!isomorphism} between the atomic flows $\phi_1=(V_1,E_1,\eta_1,\up_1,\lo_1)$ and $\phi_2=(V_2,E_2,\eta_2,\up_2,\lo_2)$ is a pair of functions $(f_V,f_E)$, such that
-\begin{itemize}
-\item $f_V$ is a bijection from $V_1$ to $V_2$; and 
-\item $f_E$ is a bijection from $E_1$ to $E_2$,
-\end{itemize}
-such that, for every $\epsilon$ in $E_1$,
-\begin{itemize}
-\item for every $\nu$ in $V_1$, $\up_1(\epsilon)=\nu$ (resp., $\lo_1(\epsilon)=\nu$) if and only if $\up_2(f_E(\epsilon))=f_V(\nu)$ (resp., $\lo_2(f_E(\epsilon))=f_V(\nu)$); and
-\item $\up_1(\epsilon)=\top$ (resp., $\lo_1(\epsilon)=\bot$) if and only if $\up_2(f_E(\epsilon))=\top$ (resp., $\lo_2(f_E(\epsilon))=\bot$).
-\end{itemize}
-Given a polarity assignment $\pi$ to $\phi_1$, we define the polarity assignment $\pi$ to $\phi_2$, such that, for every $f_E(\epsilon)$ in $E_2$, $\pi(f_E(\epsilon))=\pi(\epsilon)$.
-\end{definition}
-
-%----------------------------------------------------
-\begin{definition}\label{definiton:InducedPolarity}
-Given
-\begin{itemize}
- \item two atomic flows $\phi$ and $\psi$;
- \item a polarity assignment $\pi$ for $\phi$; and
- \item isomorphisms $f_1$, $\dots$, $f_n$ between subflows $\phi_1$, $\dots$, $\phi_n$ of $\phi$ and subflows $\psi_1$, $\dots$, $\psi_n$ of $\psi$,
-\end{itemize}
-let $\pi_i$ be $\pi$ restricted to $\phi_i$, and let $\pi'$ be a polarity assigment for $\psi$, such that $\pi'$ restricted to $\psi_i$ equals $\pi_i$ (which is a polarity assignment for $\psi_i$ by Definition~\ref{definition:FlowIsomorphism}), then if $\pi'$ is unique, we call it $\pi$.
-\end{definition}
-%---------------
-
-\newbox\contrup\setbox\contrup=\hbox{$
-   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
-   \atomicflow{(0,0)*{\afacu{}{}{}{}{}{}}}$}
-\newbox\contrdown\setbox\contrdown=\hbox{$
-   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
-   \atomicflow{(0,0)*{\afacd{}{}{}{}{}{}}}$}
-\newbox\interdown\setbox\interdown=\hbox{$
-   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
-   \atomicflow{(0,0)*{\afaid{}{}{}{}{}{}}}$}
-\newbox\interup\setbox\interup=\hbox{$
-   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
-   \atomicflow{(0,0)*{\afaiu{}{}{}{}{}{}}}$}
-\newbox\weakdown\setbox\weakdown=\hbox{$
-   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
-   \atomicflow{(0,0)*{\afawd{}{}{}{}{}{}}}$}
-\newbox\weakup\setbox\weakup=\hbox{$
-   \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
-   \atomicflow{(0,0)*{\afawu{}{}{}{}{}{}}}$}
-
-\begin{notation}\label{notation:LabelsOnBoxes}
-Let $\phi$ be an atomic flow with upper edges $\boldsymbol\epsilon=\{\epsilon_1,\dots,\epsilon_n\}$ and lower edges $\boldsymbol\iota=\{\iota_1,\dots,\iota_m\}$, we then represent it as
-\[
-\atomicflow{
-(-3, 6)*{\afvju4{\epsilon_1}{}};
-( 0, 6)*{\cdots};
-( 3, 6)*{\afvju4{}{\epsilon_n}};
-( 0, 0)*{\affr88};
-( 1, 2)*{\aflabelright\phi};
-(-3,-6)*{\afvju4{\iota_1}{}};
-( 0,-6)*{\cdots};
-( 3,-6)*{\afvju4{}{\iota_m}};
-}
-\qquad\mbox{or}\qquad
-\atomicflow{
-( 0,6)*{\afvjum4{\boldsymbol\epsilon}{}};
-( 0,0)*{\affr88};
-( 1,2)*{\aflabelright\phi};
-( 0,-6)*{\afvjdm4{\boldsymbol\iota}{}};
-}\quad.
-\]
-
-We sometimes label an atomic flow by the image of its labeling function, $\eta(V)$, \emph{e.g.}
-\[
-\atomicflow{
-( 0,8)*{\invisiblemark};
-( 0,0)*{\affr88};
-( 0,0)*{\copy\interdown};
-( 0,-6)*{\afvjm4};
-( 4,0)*{\invisiblemark}
-}\quad,\quad
-\atomicflow{
-(-6,0)*{\invisiblemark};
-( 0,6)*{\afvjm4};
-( 0,0)*{\affr{12}8};
-(-3,0)*{\copy\contrdown};
-( 3,0)*{\copy\contrup};
-( 0,-6)*{\afvjm4};
-}\quad.
-\]
-
-In general, we represent atomic flows as directed-graph diagrams, except that the special vertices $\top$ and $\bot$ are not shown, and the labels of the vertices are explicitly shown as graphical elements. When we refer to the vertices of an atomic flow, we do not include $\top$ and $\bot$. Sometimes we identify vertices with their labels. 
-\end{notation}
 
 \begin{remark}
 Given atomic flows $\phi_1=(V_1,E_1,\eta_1,\up_1,\lo_1)$ and $\phi_2=(V_2,E_2,\eta_2,\up_2,\lo_2)$, and a flow isomorphism $(f_V,f_E)$ between them, we observe that $f_V$ is a graph isomorphism between $(V_1,E_1)$ and $(V_2,E_2)$. We also note that we can not, in general, deduce $f_E$ from $f_V$. As an example, consider the flows
