--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -2,8 +2,6 @@
 
 \TODO{Informal explanation of the different normal forms.}
 
-\TODO{`in' simple form vs.\ `on' simple form.}
-
 \TODO{Alessio said: `\emph{I think it's a mistake to consider a derivation weakly streamlined with respect to a polarity. It would be better to say that it is weakly streamlined with the respect to the positive subflow, given a polarity, or something like this.}'}
 
 %---------------------------------------
@@ -12,7 +10,7 @@ An atomic flow is
 \begin{enumerate}
 %---
 \item\label{definition:FlowNormalForms:item:SimpleForm}
-\emph{on simple form with respect to the polarity assignment $\pi$}\index{simple form!flow} if it can be represented as
+\emph{in simple form with respect to the polarity assignment $\pi$}\index{simple form!flow} if it can be represented as
 \[
 \atomicflow{
 (-20, 14)*{\afvjm4};
