--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -638,7 +638,7 @@ Given the atoms, formulae and derivations described in Definition~\vref{definiti
 \item for any atom $b$,
 \begin{itemize}
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\MISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $b$, and
-\item if $b$ is not the dual of any of $a_1$, $\dots$, $a_n$ and $\Phi$ is on simple form with respect to $b$, then $\MISR_n(\Phi,a_1,\dots,a_n)$ is on simple form with respect to $b$; and
+\item if $b$ is not the dual of any of $a_1$, $\dots$, $a_n$ and $\Phi$ is in simple form with respect to $b$, then $\MISR_n(\Phi,a_1,\dots,a_n)$ is in simple form with respect to $b$; and
 \end{itemize}
 \item the size of\/ $\MISR_n(\Phi,a_1,\dots,a_n)$ depends at most cubically on the size of\/ $\Phi$, and at most quadratically on $\max\{\size{\Gammasf_1},\dots,\size{\Gammasf_N}\}$.
 \end{enumerate}
