--- a/global_transformations/threshold_formulae.tex
+++ b/global_transformations/threshold_formulae.tex
@@ -809,7 +809,7 @@ Given atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form
 \item for any atom $b$,
 \begin{itemize}
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $b$, and
-\item if $b$ is not the dual of any of $a_1$, $\dots$, $a_n$ and $\Phi$ is on simple form with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is on simple form with respect to $b$; and
+\item if $b$ is not the dual of any of $a_1$, $\dots$, $a_n$ and $\Phi$ is in simple form with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is in simple form with respect to $b$; and
 \end{itemize}
 \item the size of\/ $\QMISR_n(\Phi,a_1,\dots,a_n)$ depends at most cubically on the size of\/ $\Phi$, and quasipolynomially on $n$.
 \end{enumerate}
