--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -2,10 +2,6 @@
 
 \section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
 
-\TODO{Define $a^\phi$.}
-
-\TODO{Note: removed "modulo isomorphism" since this is already taken care of in the definitions earlier on.}
-
 %---------------------------------------
 \begin{proposition}\label{proposition:FlowUnique}
 Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ such that:
@@ -64,6 +60,8 @@ where the mapping is indicated by small numerals.
 all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the conclusion.
 \end{enumerate}
 \end{proposition}
+
+\TODO{Do we ever label $\epsilon$ with $a$?}
 
 %---------------------------------------
 \begin{definition}\label{definition:AssociatedFlow}
