--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -162,7 +162,7 @@ For every $n>0$, reduction\/ $\to_{\frmis_n}$ is sound; moreover, if\/ $\Phi\to_
 \begin{proof}
 Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_{\frmis_n}\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figures in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
 
-Since each of $\psi_1$, $\dots$, $\psi_n$ is connected, we assume, by Remark~\vref{remark:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
+Since each of $\psi_1$, $\dots$, $\psi_n$ is connected, we assume, by Convention~\vref{convention:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
