Defined redex and contractum

--- a/transformations.tex
+++ b/transformations.tex
@@ -13,6 +13,7 @@ there is a one-to-one map, $g$, from the lower edges of $\phi$ to the lower edge
 \item\label{definition:FlowReduction:item:Polarity}
 for every polarity assignment $\pi$ for $\phi$, there is a polarity assignment $\pi'$ for $\psi$ such that $\pi'(f(\epsilon))=\pi(\epsilon)$ and $\pi'(g(\iota))=\pi(\iota)$, for any upper edge $\epsilon$ and any lower edge $\iota$ of $\phi'$.
 \end{enumerate}
+We call $\phi$ a \emph{redex} and $\psi$ a \emph{contractum} of $\mathrel R$.
 \end{definition}
 %---------------
 
