--- a/flows.tex
+++ b/flows.tex
@@ -1,6 +1,6 @@
 
 %====================
-\chapter{Definitions}
+\chapter{Atomic Flows}
 
 In this chapter we introduce the main contribution of this thesis, a geometric, bureaucracy-free formalism, called `atomic flows'. An atomic flow is a directed graph obtained from a derivation by only retaining information about the creation and destruction of atom occurrences. Atomic flows are, essentially, specialised Buss flow graphs \cite{Buss:91:The-Unde:uq}. Notably, the atomic flow of a derivation completely disregards all the logical relations and associated inference steps; so, an atomic flow is not a derivation, but only a very abstract representation of it.
 
