--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -1,4 +1,4 @@
-\chapter{Flows and Derivations}\label{chapter:FlowsAndDerivations}
+\chapter{Atomic Flows and Derivations}\label{chapter:FlowsAndDerivations}
 
 \section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
 
@@ -187,23 +187,8 @@ whose flow is $\phi$.
 Given a derivation $\Phi$ with atomic flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\phi_a$ of $\phi$, such that every edge of $\phi_a$ is mapped to from $a$ or $\bar a$.
 \end{definition}
 
+%=================================================================
 \section{Normal Forms of Derivations}\label{section:DerNormalForm}
-
-\TODO{Ensure that all the normal forms of atomic flows have a corresponding definition for derivations.}
-
-\begin{definition}\label{definition:DerSimpleForm}
-A derivation with associated atomic flow $\phi$ is \emph{in simple form with respect to} (\emph{the atom}) $a$\index{simple form!derivation!with respect to atom}, if $\pi$ is a polarity assignment for $\phi$, such that the edges in $\phi$ mapped to from occurrences of $a$ have a positive polarity, and the restriction of $\phi$ to $a$ is in simple form with respect to $\pi$.
-\end{definition}
-
-\begin{definition}\label{definition:DerStreamlined}
-A derivation with associated atomic flow $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}\index{streamlined!derivation}, \emph{super streamlined} and \emph{hyper streamlined}) if $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}). The derivation is \emph{weakly streamlined with respect to} (\emph{the atom}) $a$\index{streamlined!weakly!with respect to atom}, if $\pi$ is a polarity assignment for $\phi$, such that the edges in $\phi$ mapped to from occurrences of $a$ have a positive polarity, and the restriction of $\phi$ to $a$ is weakly streamlined with respect to $\pi$.
-\end{definition}
-
-\TODO{Add references to Propositions.}
-
-\begin{remark}\label{remark:DerCutFree}
-A streamlined proof is cut-free, a super streamlined proof is analytic and a hyper streamlined proof is in system $\KS$.
-\end{remark}
 
 \begin{definition}\label{definition:aiDecomposedForm}
 Given two derivations
