--- a/global_transformations/threshold_formulae.tex
+++ b/global_transformations/threshold_formulae.tex
@@ -1,4 +1,4 @@
-\subsubsection{Threshold Formulae}\label{subsubsection:ThresholdFormulae}
+\subsection{Threshold Formulae}\label{subsubsection:ThresholdFormulae}
 
 \TODO{Change this introduction}
 
