--- a/streamlining.tex
+++ b/streamlining.tex
@@ -1,4 +1,4 @@
-\chapter{Streamlining}\label{chapter:Streamlining}
+\chapter{Main Result}\label{chapter:MainResult}
 
 \begin{proposition}
 Given a derivation $\Phi$ with atomic flow $\phi$, and a polarity assignment $\pi$ for $\phi$. Let occurrences of $a_1$, $\dots$, $a_n$ map to all the edges in $\phi$ with polarity assignment $\ppl$ and occurrences of $\bar a_1$, $\dots$, $\bar a_n$ map to all the edges in $\phi$ with polarity assignment $\pmi$, then
