--- a/thesis.tex
+++ b/thesis.tex
@@ -118,14 +118,15 @@
 \input{introduction.tex}
 \part{Derivations}
 \input{formalism.tex}
-\input{propositional_classical.tex}
+\input{sks.tex}
 \part{Atomic Flows}
-\input{flows.tex}
-\input{flows_and_derivations.tex}
+\input{atomic_flows.tex}
+\input{atomic_flows_and_derivations.tex}
 \input{normal_forms.tex}
 \part{Normalisation}
-\input{transformations.tex}
-\input{streamlining.tex}
+\input{global_reductions.tex}
+\input{local_reductions.tex}
+\input{main_result.tex}
 \part{Conclusions}
 \input{conclusions.tex}
 \printindex
