--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -1,5 +1,7 @@
 \TODO{Add labels to edges}
 
+\TODO{Make sure we don't join $a$ with $\bar a$.}
+
 %--------------------------------
 \newcommand{\frpb}{{\mathsf{pb}}}
 \begin{definition}\label{definition:PathBreaker}
